# Embedded_Projects

./: README.md
Final Project (Dual-Elevator Control System)/: CMakeLists.txt  Embedded_FinalProject - Copy.pdsprj.DESKTOP-I9QS42K.lenovo.workspace  Embedded_FinalProject.pdsprj  Embedded_FinalProject.pdsprj.DESKTOP-I9QS42K.lenovo.workspace  README.md  STM32F401xE.ld  common.ld  startup_common.s
Final Project (Dual-Elevator Control System)/Project Backups/: Embedded_FinalProject - Copy [20260513, 21-02-52].pdsprj  Embedded_FinalProject - Copy [20260513, 21-21-21].pdsprj  Embedded_FinalProject - Copy [20260513, 21-31-35].pdsprj  Embedded_FinalProject - Copy [20260513, 22-25-02].pdsprj  Embedded_FinalProject - Copy [20260513, 22-29-08].pdsprj  Embedded_FinalProject - Copy [20260514, 01-26-51].pdsprj  Embedded_FinalProject - Copy [20260514, 01-41-07].pdsprj  Embedded_FinalProject - Copy [20260514, 12-32-25].pdsprj  Embedded_FinalProject - Copy [Autosaved].pdsprj  Embedded_FinalProject [20260513, 04-01-04].pdsprj  Embedded_FinalProject [20260513, 04-01-26].pdsprj  Embedded_FinalProject [20260513, 04-01-30].pdsprj  Embedded_FinalProject [20260513, 04-01-33].pdsprj  Embedded_FinalProject [20260513, 04-01-34].pdsprj  Embedded_FinalProject [20260513, 04-05-43].pdsprj  Embedded_FinalProject [20260513, 04-05-43].pdsprj.DESKTOP-I9QS42K.lenovo.workspace  Embedded_FinalProject [20260513, 20-27-05].pdsprj  Embedded_FinalProject [20260513, 20-27-09].pdsprj  Embedded_FinalProject [Autosaved].pdsprj
Final Project (Dual-Elevator Control System)/communication/: communication.c  communication.h  communication_private.h
Final Project (Dual-Elevator Control System)/debounce/: debounce.c  debounce.h  debounce_private.h
Final Project (Dual-Elevator Control System)/diagnostics/: diagnostics.c  diagnostics.h  diagnostics_private.h
Final Project (Dual-Elevator Control System)/docs/: pwm_math.md  register_map.md  scheduler_design.md  spi_packet.md  state_machine_design.md
Final Project (Dual-Elevator Control System)/emergency/: emergency.c  emergency.h  emergency_private.h
Final Project (Dual-Elevator Control System)/exti/: exti.c  exti.h  exti_private.h
Final Project (Dual-Elevator Control System)/gpio/: gpio.c  gpio.h  gpio_private.h
Final Project (Dual-Elevator Control System)/interrupts/: interrupts.c  interrupts.h  interrupts_private.h
Final Project (Dual-Elevator Control System)/main/: main.c  main.h  main_private.h  pin_mapping.h
Final Project (Dual-Elevator Control System)/pwm/: pwm.c  pwm.h  pwm_private.h
Final Project (Dual-Elevator Control System)/queue/: queue.c  queue.h  queue_private.h
Final Project (Dual-Elevator Control System)/rcc/: rcc.c  rcc.h  rcc_private.h
Final Project (Dual-Elevator Control System)/scheduler/: scheduler.c  scheduler.h  scheduler_private.h
Final Project (Dual-Elevator Control System)/spi/: spi.c  spi.h  spi_private.h
Final Project (Dual-Elevator Control System)/state_machine/: dispatcher.c  dispatcher.h  dispatcher_private.h  elevator_fsm.c  elevator_fsm.h  elevator_fsm_private.h
Final Project (Dual-Elevator Control System)/timer/: timer.c  timer.h  timer_private.h
Final Project (Dual-Elevator Control System)/uart/: uart.c  uart.h  uart_private.h
Project 1 (Memory & Codec Library)/: ReadMe.md
Project 1 (Memory & Codec Library)/include/: BIT_MATH.h  MemScanner.h  MsgCodec.h  STD_TYPES.h
Project 1 (Memory & Codec Library)/src/: MemScanner.c  MsgCodec.c  main.c
Project 2 (Door Lock System)/: CMakeLists.txt  Project2.pdsprj  README.md  STM32F401xE.ld  STM32F401xE.s
Project 2 (Door Lock System)/include/: display.h  exti.h  gpio.h  keypad.h  main.h  rcc.h  state_machine.h
Project 2 (Door Lock System)/src/: display.c  exti.c  gpio.c  keypad.c  main.c  rcc.c  state_machine.c
Project 3 (Auto-Cooler System)/: CMakeLists.txt  Project3.pdsprj  README.md  arm-none-eabi.cmake  common.ld  startup_common.s
Project 3 (Auto-Cooler System)/adc/: adc.c  adc.h  adc_private.h
Project 3 (Auto-Cooler System)/gpio/: gpio.c  gpio.h  gpio_private.h
Project 3 (Auto-Cooler System)/lcd/: lcd.c  lcd.h  lcd_private.h
Project 3 (Auto-Cooler System)/main/: main.c  main_private.h
Project 3 (Auto-Cooler System)/nvic/: nvic.c  nvic.h  nvic_private.h
Project 3 (Auto-Cooler System)/pwm/: pwm.c  pwm.h  pwm_private.h
Project 3 (Auto-Cooler System)/rcc/: rcc.c  rcc.h  rcc_private.h
Project 3 (Auto-Cooler System)/state_machine/: state_machine.c  state_machine.h  state_machine_private.h
Project 3 (Auto-Cooler System)/timer/: timer.c  timer.h  timer_private.h
